Updated adversarial code

--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,3 @@
-composable-sft/corpora
-composable-sft/models
-adapter-transformers/corpora
-adapter-transformers/models
-adapter-transformers/models_prefix
 ~/
 data/
+models/
